--- a/style.css
+++ b/style.css
@@ -1,17 +1,16 @@
-body::before {
-    display: block;
-    content: '';
-    height: 60px;
-  }
-  
-  #map {
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
-  }
-  
-  @media (min-width: 768px) {
-    .news-input {
-      width: 50%;
-    }
-  }
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #333;
+  color: white;
+  text-align: center;
+  padding: 20px 0;
+  border-top: 2px solid gold;
+}
+
+body {
+  padding-bottom: 80px; /* Adjust this value based on your footer's height */
+}
+
