--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: #333;
+  background-color: #0205a8;
   color: white;
   text-align: center;
   padding: 20px 0;
